--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,6 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/fw-logo-small.svg" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
-   -->
 
    <!-- Material UI Font -->
     <link
@@ -33,6 +26,7 @@
       crossorigin="anonymous"
     ></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/antd/4.16.1/antd.min.js" integrity="sha512-+8j2sGHsEwc+nYLZ1mRV2aXSQ9gB4QJzHXpp0maMJRScrwmvz/TmYX9H8FE3vvexSDIKxduPnr3kr/vStGVXBQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
